--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -291,12 +291,13 @@ p.awesome_line {
   .about {
     height: 100%;
     padding: 0px !important;
-    padding-top: 25px !important;
+    padding-top: 100px !important;
   }
   .section-head h4 {
     font-size: 18px !important;
     letter-spacing: 2px;
   }
+
   .section-head p {
     margin-top: 0px !important;
     letter-spacing: 1px;
@@ -317,5 +318,14 @@ p.awesome_line {
     margin: 10px !important;
   }
 }
-@media screen and (min-width: 601) and (max-width: px) {
+
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 40px;
 }
